--- a/dev-store/public/index.html
+++ b/dev-store/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
       Notice the use of %PUBLIC_URL% in the tag above.
@@ -28,4 +29,5 @@
       To create a production bundle, use `npm run build`.
     -->
   </body>
+  <script src="https://use.fontawesome.com/b6e3c53438.js"></script>
 </html>
