--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro|Open+Sans+Condensed:300" rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.6.1/css/tachyons.min.css"/>
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <!--
